# AIDevToolsZoomcamp

./: .gitignore  package.json  styles.css
module 1 snake/backend/src/game/: snake.js
module_2-1_snake/: Dockerfile  docker-compose.yml
module_2-1_snake/backend/: AGENTS.md  db.py  main.py  openapi.yaml  requirements.txt  verify_api.py
module_2-1_snake/backend/tests_integration/: test_sqlite.py
module_2-1_snake/frontend/: README.md  index.html  package-lock.json
module_2-1_snake/frontend/src/: main.js
module_2-2_hw/: .gitignore  README.md  package-lock.json  package.json  prompt.md
module_2-2_hw/backend/: pyproject.toml
module_2-2_hw/backend/app/: main.py
module_2-2_hw/backend/tests/: test_execution.py  test_sessions.py
module_2-2_hw/frontend/: index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
module_2-2_hw/frontend/src/: App.test.tsx  App.tsx  config.ts  editorConfig.ts  main.tsx  styles.css
module_2_snake/: README.md  pyproject.toml
module_2_snake/backend/: README.md  app.db  db.py  main.py  models.py  pyproject.toml
module_2_snake/backend/tests/: test_main.py
module_2_snake/frontend/: Dockerfile  package-lock.json  package.json
module_2_snake/frontend/src/backend/: api.js
module_2_snake/frontend/tests/: runTests.js
module_3-2_hw/: main.py  pyproject.toml  test.py
module_3-2_hw/md_outputs/: https_datatalks.club.md  https_github.com_alexeygrigorev_minsearch.md
src/: main.js
src/backend/: api.js
tests/: runTests.js
