[project]
name = "collab-interview-backend"
version = "0.1.0"
description = "FastAPI backend for collaborative coding interview prototype"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
